test/valid_codesnipsets/mutli_line_comment.go
package main

import "fmt"

func main() {
    /* OH  
    SHIT 
    WHAT IS WRONG 
    */if true {
        foo()
    }
}

func foo() {

}