test/parse_errors/missing_new_line.go
package main

import "fmt"

func main(){
    var a int = 4 var b bool true
}